# psbmpc

./: .gitignore  CMakeLists  CMakeLists.txt  README.md  matrix.csv
dev_ws/src/psbmpc_package/: CMakeLists.txt  package.xml
libs/psbmpc_lib/: CMakeLists.txt  README.md  kf.h  mrou.h  psbmpc.cpp
libs/psbmpc_lib/include/: cpe.h  kf.h  mrou.h  obstacle.h  obstacle_manager.h  obstacle_sbmpc.h  obstacle_ship.h  ownship.h  prediction_obstacle.h  psbmpc.h  psbmpc_index.h  psbmpc_parameters.h  psbmpc_variables.h  simple_kinematic_model.h  tracked_obstacle.h  utilities.h
libs/psbmpc_lib/src/: cpe.cpp  kf.cpp  mrou.cpp  obstacle.cpp  obstacle_manager.cpp  obstacle_model.cpp  obstacle_sbmpc.cpp  obstacle_ship.cpp  ownship.cpp  prediction_obstacle.cpp  psbmpc.cpp  psbmpc_parameters.cpp  simple_kinematic_model.cpp  tracked_obstacle.cpp  utilities.cpp
libs/psbmpc_lib_gpu/: CMakeLists.txt  README.md
libs/psbmpc_lib_gpu/include/: cb_cost_functor.cuh  cb_cost_functor_structures.cuh  cmatrix.cuh  cpe.cuh  cuda_obstacle.cuh  mrou.cuh  obstacle.cuh  obstacle.h  obstacle2.cuh  obstacle_manager.cuh  obstacle_manager.h  obstacle_sbmpc.cuh  obstacle_sbmpc.h  obstacle_ship.cuh  obstacle_ship.h  ownship.cuh  ownship.h  prediction_obstacle.cuh  prediction_obstacle.h  psbmpc.cuh  psbmpc.h  psbmpc_defines.h  psbmpc_index.h  psbmpc_parameters.h  tracked_obstacle.cuh  tracked_obstacle.h  utilities.cuh  utilities.h
libs/psbmpc_lib_gpu/src/: cb_cost_functor.cu  cmatrix.cu  cpe.cpp  cpe.cu  cuda_obstacle.cu  kf.cu  mrou.cpp  mrou.cu  obstacle.cpp  obstacle.cu  obstacle_manager.cpp  obstacle_manager.cu  obstacle_sbmpc.cpp  obstacle_sbmpc.cu  obstacle_ship.cpp  obstacle_ship.cu  ownship.cpp  ownship.cu  prediction_obstacle.cpp  prediction_obstacle.cu  psbmpc.cpp  psbmpc.cu  psbmpc_parameters.cpp  tracked_obstacle.cpp  tracked_obstacle.cu  utilities.cpp
libs/psbmpc_lib_gpu/tryms_matrix/: README.md  cmatrix.cuh  cml.cuh  dynamic_matrix.cuh  eigen_interface.cuh  gpu_friendly.cu  pseudo_dynamic_matrix.cuh  static_matrix.cuh  tml.cuh
psbmpc_cxx/: CMakeLists.txt  README.md  config.csv
psbmpc_cxx/asv_msgs/msg/: Covariance.msg
psbmpc_cxx/debug/: CMakeCache.txt  Makefile
psbmpc_cxx/examples/: CMakeLists.txt  run_psbmpc_new_cost.cpp  run_psbmpc_with_grounding_hazards.cpp
psbmpc_cxx/libs/psbmpc_lib/: CMakeLists.txt  README.md
psbmpc_cxx/libs/psbmpc_lib_gpu/: CMakeLists.txt  README.md
psbmpc_cxx/psbmpc_lib/: CMakeLists.txt  README.md
psbmpc_cxx/psbmpc_lib/cmake/: PSBMPC1Config.cmake.in
psbmpc_cxx/psbmpc_lib/include/: geometry.hpp  grounding_hazard_manager.hpp  kf.hpp  mrou.hpp  obstacle_manager.hpp  obstacle_predictor.hpp  psbmpc_defines.hpp  psbmpc_index.hpp  psbmpc_parameters.hpp  sbmpc.hpp  sbmpc_index.hpp  sbmpc_parameters.hpp  tracked_obstacle.hpp  utm_projection.hpp
psbmpc_cxx/psbmpc_lib/src/: kf.cpp  mrou.cpp  obstacle_manager.cpp  psbmpc_parameters.cpp  sbmpc.cpp  sbmpc_parameters.cpp  tracked_obstacle.cpp
psbmpc_cxx/release/: CMakeCache.txt  Makefile
psbmpc_cxx/src/: asv_ctrl_psbmpc_node.cpp  asv_ctrl_psbmpc_node.h  asv_ctrl_psbmpc_ros_link.cpp  asv_ctrl_psbmpc_ros_link.h
psbmpc_cxx/src/matlab_scripts/: .~lock.matrix.csv#  matrix.csv  test_cpe_plot.m  test_mrou_plot.m  test_obstacle_predictor_plot_init.m  test_obstacle_predictor_plot_update.m  test_obstacle_predictor_plot_update_1.m  test_obstacle_predictor_plot_update_2.m  test_obstacle_ship_plot.m
psbmpc_cxx/src/tests/: CMakeLists.txt  test_cpe.cpp  test_cpe_cpu.cpp  test_cpe_gpu.cu  test_kf.cpp  test_mrou.cpp  test_obstacle.cpp  test_obstacle_predictor.cpp  test_obstacle_ship.cpp  test_obstacle_ship_cpu.cpp  test_obstacle_ship_gpu.cu  test_ownship.cpp  test_ownship_cpu.cpp  test_ownship_gpu.cu  test_polygons.cpp  test_prng.cpp  test_psbmpc.cpp  test_psbmpc_cost_class.cpp  test_psbmpc_cpu.cpp  test_psbmpc_gpu.cpp  test_psbmpc_grounding.cpp  test_psbmpc_grounding_cpu.cpp  test_read_shapefile.cpp
psbmpc_cxx/tests/: CMakeLists.txt  test_cpe_cpu.cpp  test_cpe_gpu.cu  test_kf.cpp  test_mrou.cpp  test_obstacle.cpp  test_obstacle_predictor.cpp  test_obstacle_ship.cpp  test_obstacle_ship_cpu.cpp  test_obstacle_ship_gpu.cu  test_ownship.cpp  test_ownship_cpu.cpp  test_ownship_gpu.cu  test_polygons.cpp  test_prng.cpp  test_psbmpc.cpp  test_psbmpc_cost_class.cpp  test_psbmpc_grounding.cpp  test_psbmpc_new_cost.cpp  test_read_shapefile.cpp  test_thrust.cu  test_tml.cu  test_tml_pdmatrix.cu
psbmpc_cxx/tests/grounding_hazard_data/: piren_frame_psbmpc_polygons_trd.csv
psbmpc_cxx/tests/matlab_scripts/: test_cpe_plot.m  test_mrou_plot.m  test_obstacle_predictor_plot_init.m  test_obstacle_predictor_plot_update_1.m  test_obstacle_predictor_plot_update_2.m  test_ownship_plot.m
psbmpc_ros_package/: CMakeLists.txt  README.md  package.xml
psbmpc_ros_package/config/: dom.yaml  ghm.yaml  psbmpc.yaml  psbmpc_visualization.yaml
psbmpc_ros_package/grounding_hazard_data/: manual_trondheim_harbour_polygons_lla.csv  manual_trondheim_harbour_polygons_ned.csv
psbmpc_ros_package/include/: dom_node.hpp  ghm_node.hpp  psbmpc_node.hpp  psbmpc_visualization_node.hpp
psbmpc_ros_package/launch/: dom.launch  ghm.launch  psbmpc.launch  psbmpc_visualization.launch
psbmpc_ros_package/rviz/: psbmpc_setup.rviz
psbmpc_ros_package/src/: dom_node.cpp  ghm_node.cpp  psbmpc_node.cpp  psbmpc_visualization_node.cpp
psbmpc_ros_package/srv/: GetPolygons.srv  LoadWaypoints.srv  SetPSBMPCMode.srv
psbmpc_ros_package/waypoint_data/: waypoints_scenario_CR_PS_and_HO.yaml  waypoints_scenario_CR_PS_compliant.yaml  waypoints_scenario_CR_PS_not_compliant.yaml  waypoints_scenario_CR_SS.yaml  waypoints_scenario_CR_SS_and_HO.yaml  waypoints_scenario_HO_and_OT_en.yaml  waypoints_scenario_HO_compliant.yaml  waypoints_scenario_HO_not_compliant.yaml  waypoints_scenario_OT_en.yaml  waypoints_scenario_OT_ing_and_CR_SS.yaml  waypoints_scenario_open_sea.yaml
src/tests/: CMakeLists.txt  test.cpp  test_cmatrix.cpp  test_cpe.cpp  test_kf.cpp  test_mrou.cpp  test_obstacle.cpp  test_ownship.cpp  test_prng.cpp  test_psbmpc.cpp  test_psbmpc_gpu.cpp  test_thrust.cpp  test_thrust.cu
(+890 files in other folders)
