<?xml version="1.0"?>
<package format="2">
  <name>psbmpc</name>
  <version>1.0.0</version>
  <description>Package containing ROS1 code for using the PSBMPC COLAV algorithm</description>
  <maintainer email="trym.tengesdal@ntnu.no">admin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>ros_af_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
